# MaLangEE

./: .gitignore  README.md  deploy.sh
.claude/scripts/: figma-mcp.sh
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
.serena/memories/: api_integration.md  audio_processing.md  code_style_conventions.md  development_workflow.md  project_overview.md  project_structure.md  session_history_2025_01_13.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
ai-engine/: pyproject.toml
ai-engine/prompts/: system_instruction.md
ai-engine/realtime_conversation/: README.md  (+6 more)
backend/: .env.local  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/v1/: auth.py  chat.py  users.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: database.py  models.py
backend/app/repositories/: chat_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: chat.py  token.py  user.py
backend/app/services/: auth_service.py  chat_service.py  session_cleanup.py  user_service.py
backend/tests/: test_session_lifecycle.py
docs/: 00-PROJECT_INFO.md  02-SERVER_OPS.md  03-FRONTEND_SCENARIO_GUIDE.md  real_time_conversation_ws_guide.md
frontend/: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  create-worktree.sh  next.config.ts  nodemon.json  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
scripts/: 1-init_server.sh  2-setup_env.sh  5-setup_services.sh  config.sh  copy-ssh-key.ps1
tests/: ai-tutor.html  index.html
(+117 files in other folders)
